- Fix for diesel fluid block showing up incorrectly in-game (hopefully for all languages)

--- a/src/main/resources/assets/tc/lang/fr_FR.lang
+++ b/src/main/resources/assets/tc/lang/fr_FR.lang
@@ -1,6 +1,6 @@
 <!-- ## This is a comment, do no remove or modify these! ## -->
 <!-- ## Only replace the words on the right side of "=" ## -->
-<!-- ## Save the file the same way this file was saved but replace "en_US" with apropriate language name ## -->
+<!-- ## Save the file the same way this file was saved but replace "en_US" with appropriate language name ## -->
 
 <!-- ## Blocks ## -->
 tile.tc:oreTC.copperOre.name=Minerai de cuivre
