--- a/src/main/resources/assets/tc/lang/en_US.lang
+++ b/src/main/resources/assets/tc/lang/en_US.lang
@@ -22,7 +22,7 @@ tile.tc:assemblyTableII.name=Assembly Table II
 tile.tc:assemblyTableIII.name=Assembly Table III
 tile.tc:tcRail.name=Traincraft Rail
 tile.tc:tcRailGag.name=Traincraft Rail
-fluid.tc:fluid.diesel.name=Diesel Fuel
+fluid.tc:diesel.name=Diesel Fuel
 fluid.tc:refinedfuel.name=Refined Fuel
 tile.tc:bridgePillar.name=Bridge Pillar
 
